<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="data"
            type="com.webkul.mobikul.models.user.SignInForgetPasswordData" />

        <variable
            name="handler"
            type="com.webkul.mobikul.handlers.ForgotPasswordDialogHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_generic"
                android:text="@string/forgot_your_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_xlarge" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_generic"
                android:text="@string/please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password_"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_medium" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={data.email}"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_medium">

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->handler.onClickForgotPasswordPositiveBtn(data.email)}"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/ok"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->handler.onClickForgotPasswordNegativeBtn()}"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:background="@drawable/progress_bar_bg"
            android:indeterminate="true"
            android:visibility="@{safeUnbox(loading) ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</layout>