<?xml version="1.0" encoding="utf-8"?><!--
  ~ Webkul Software.
  ~
  ~ Kotlin
  ~
  ~ @author Webkul <support@webkul.com>
  ~ @category Webkul
  ~ @package com.webkul.mobikul
  ~ @copyright 2010-2018 Webkul Software Private Limited (https://webkul.com)
  ~ @license https://store.webkul.com/license.html ASL Licence
  ~ @link https://store.webkul.com/license.html
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="showGuestCheckout"
            type="boolean" />

        <variable
            name="handler"
            type="com.webkul.mobikul.handlers.ProceedCheckoutBottomSheetFragmentHandler" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_whiteBlack"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            fontPath="fonts/Montserrat-SemiBold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@string/select_checkout_method"
            android:textAllCaps="true"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_medium"
            tools:text="Sort" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@color/colorAccent"
            android:onClick="@{() -> handler.onClickLoginBtn()}"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@drawable/shape_rect_white_bg_black_border_1_dp"
            android:onClick="@{() -> handler.onClickCheckoutAsGuestBtn()}"
            android:text="@string/checkout_as_guest"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_medium"
            android:visibility="@{safeUnbox(showGuestCheckout) ? View.VISIBLE : View.GONE}" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/shape_rect_white_bg_black_border_1_dp"
            android:onClick="@{() -> handler.onClickRegisterAndCheckoutBtn()}"
            android:text="@string/register_and_checkout"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_medium" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>