<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="isUpdating"
            type="Boolean" />

        <variable
            name="data"
            type="com.webkul.mobikul.wallet.models.wallet.AddPayeeModel" />

        <variable
            name="handler"
            type="com.webkul.mobikul.wallet.handlers.AddPayeeDialogFragmentHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_whiteBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_generic"
                android:text="@string/enter_payee_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_xlarge" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nickName"
                style="@style/CustomTilStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_generic"
                android:textColorHint="@color/text_color_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick_name"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:paddingStart="@dimen/spacing_generic"
                    android:paddingEnd="@dimen/spacing_generic"
                    android:text="@={data.nickName}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/text_size_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/CustomTilStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_generic"
                android:textColorHint="@color/text_color_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!safeUnbox(isUpdating)}"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/spacing_generic"
                    android:paddingEnd="@dimen/spacing_generic"
                    android:text="@={data.email}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/text_size_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_email"
                style="@style/CustomTilStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_generic"
                android:textColorHint="@color/text_color_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/spacing_generic"
                    android:paddingEnd="@dimen/spacing_generic"
                    android:text="@={data.confirmEmail}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="@{safeUnbox(isUpdating) ? View.GONE : View.VISIBLE}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> handler.onClickUpdate()}"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/update"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="@{safeUnbox(isUpdating) ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> handler.onClickSubmit()}"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/submit"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="@{safeUnbox(isUpdating) ? View.GONE : View.VISIBLE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> handler.onClickReset()}"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/reset"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="@{safeUnbox(isUpdating) ? View.GONE : View.VISIBLE}" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:background="@drawable/progress_bar_bg"
            android:indeterminate="true"
            android:visibility="@{safeUnbox(loading) ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</layout>